changes to notebook

--- a/PortugueseBankMarketingCampaign.ipynb
+++ b/PortugueseBankMarketingCampaign.ipynb
@@ -3027,7 +3027,7 @@
     "Evaluation metrics are quite similar with and without GridSearchCV except for the following:\n",
     "1. KNN & SVC precision metrics have reduced.\n",
     "2. Training accuracy for KNN has gone up by 9 percent.\n",
-    "3. Training times would be higher for GridSearchCV for obvious reasons.\n",
+    "3. Training times would be higher for GridSearchCV for obvious reasons. GridSearchCV SVC training time is faster than simple SVC training. I observed this pattern only in the latest run. I am running my Notebook on a new MacBook Pro with GPUs. When I ran this notebook on Colab (with a pro subscription), it took longer than my macbook. I cannot explain this and will look into it.\n",
     "\n",
     "In terms of next steps, I would like to understand the Neural Networks model in detail that is presented in the research paper.\n",
     "\n",
@@ -3041,20 +3041,6 @@
    "source": [
     "##### Questions"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
