--- a/PortugueseBankMarketingCampaign.ipynb
+++ b/PortugueseBankMarketingCampaign.ipynb
@@ -3028,6 +3028,7 @@
     "1. KNN & SVC precision metrics have reduced.\n",
     "2. Training accuracy for KNN has gone up by 9 percent.\n",
     "3. Training times would be higher for GridSearchCV for obvious reasons. GridSearchCV SVC training time is faster than simple SVC training. I observed this pattern only in the latest run. I am running my Notebook on a new MacBook Pro with GPUs. When I ran this notebook on Colab (with a pro subscription), it took longer than my macbook. I cannot explain this and will look into it.\n",
+    "4. I consistently see 'UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.' for knn grid search cv. I don't think that this affects my results as I get similar results in colab without the warning.\n",
     "\n",
     "In terms of next steps, I would like to understand the Neural Networks model in detail that is presented in the research paper.\n",
     "\n",
